--- a/ciet_pmu/templates/partials/footer.html
+++ b/ciet_pmu/templates/partials/footer.html
@@ -1,7 +1,7 @@
 {% load static %}
 {% load static tailwind_tags %}
 
-<footer class="w-full bg-gray-900 text-white py-10">
+<footer class="w-full bg-gray-900 h-full text-white py-10">
   <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
     <div class="flex flex-col lg:flex-row justify-between gap-12 lg:gap-24">
       
