fix navbar error

--- a/ciet_pmu/templates/partials/footer.html
+++ b/ciet_pmu/templates/partials/footer.html
@@ -55,7 +55,7 @@
     <!-- Footer Bottom -->
     <div class="mt-10 text-center text-xs sm:text-sm text-gray-400 border-t border-gray-800 pt-6">
       <p>© 2025 CIET PMU. All rights reserved.</p>
-      <p class="mt-1 text-gray-500">Designed by SMS</p>
+      {% comment %} <p class="mt-1 text-gray-500">Developed by SMS</p> {% endcomment %}
     </div>
   </div>
 </footer>
